--- a/src/Components/PayAndDelivery/PayAndDelivery.scss
+++ b/src/Components/PayAndDelivery/PayAndDelivery.scss
@@ -14,6 +14,9 @@
         gap: 30px;
         margin-bottom: 35px;
     }
+    &__map{
+        display: flex;
+    }
     &__item {
         display: flex;
         align-items: center;
@@ -38,17 +41,6 @@
             transform: translate(-50%, 50%);
             z-index: 1;
         }
-        // &::after{
-        //     position: absolute;
-        //     content: '';
-        //     background-color: #fff;
-        //     box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.03);
-        //     width: 255px;
-        //     height: 105px;
-        //     top: 0;
-        //     left: 0;
-        //     z-index: 1;
-        // }
         img {
             position: absolute;
             left: 50%;
