--- a/src/Components/Form/Form.scss
+++ b/src/Components/Form/Form.scss
@@ -43,15 +43,7 @@
         padding-left: 10px;
 
     }
-    p{
-        margin-top: 15px;
-        cursor: pointer;
-        text-decoration: none;
-        color: #000;
-        &:hover{
-            color: #FF2E65;
-        }
-    }
+
     a{
         text-decoration: none;
         color: black;
@@ -73,6 +65,21 @@
     }
     }
 
+    }
+
+    .error {
+        margin-bottom: 25px;
+        color: #FF2E65
+    }
+
+    .link{
+        margin-top: 15px;
+        cursor: pointer;
+        text-decoration: none;
+        color: #000;
+        &:hover{
+            color: #FF2E65;
+        }
     }
 
 
