--- a/src/Components/CheckOut/TotalPrice/TotalPrice.scss
+++ b/src/Components/CheckOut/TotalPrice/TotalPrice.scss
@@ -1,6 +1,6 @@
 .total {
     padding: 22px;
-    max-width: 340px;
+    max-width: 400px;
     display: flex;
     flex-direction: column;
     background: #ffffff;
@@ -27,6 +27,7 @@
             font-size: 17px;
             line-height: 28px;
             color: #231f20;
+            margin-right: 15px;
         }
         &__info {
             display: flex;
@@ -44,6 +45,7 @@
                 line-height: 15px;
                 color: rgba(35, 31, 32, 0.8);
                 opacity: 0.6;
+                
             }
         }
     }
