--- a/src/Components/Nav/BasketBtn/BasketBtn.scss
+++ b/src/Components/Nav/BasketBtn/BasketBtn.scss
@@ -1,7 +1,7 @@
 .basket__btn{
     position: fixed;
-    width: 50px;
-    height: 50px;
+    width: 60px;
+    height: 60px;
     background: #FF2E65;
     border-radius: 100%;
     right: 200px;
@@ -11,13 +11,13 @@
     text-align: center;
     color: #fff;
     font-size: 16px;
-    line-height: 50px
-    // svg{
-    //     position: absolute;
-    //     color: #fff;
-    //     top: 50%;
-    //     left: 50%;
-    //     transform: translate(-50%, -55%);
+    line-height: 65px;
+    svg{
+        position: absolute;
+        color: #fff;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -55%);
         
-    // }
+    }
 }
