--- a/src/Components/ProfileForm/ProfileForm.scss
+++ b/src/Components/ProfileForm/ProfileForm.scss
@@ -2,6 +2,17 @@
     display: flex;
     flex-direction: column;
     padding: 50px;
+    &__img{
+        width: 200px;
+        height: 200px;
+        background: #ccc;
+        border-radius: 100%;
+        overflow: hidden;
+        margin-bottom: 20px;
+        img{
+            height: 100%;
+        }
+    }
     &__title {
         font-weight: 700;
         font-size: 30px;
@@ -28,6 +39,7 @@
             height: 50px;
             margin-bottom: 10px;
             padding-left: 15px;
+            
         }
     }
     &__btn {
@@ -35,3 +47,14 @@
         gap: 30px;
     }
 }
+
+#hidden{
+    opacity: 0;
+    height: 0;
+    width: 0;
+    line-height: 0;
+    overflow: hidden;
+    padding: 0;
+    margin: 0;
+}
+
