--- a/src/Components/CheckOut/TotalPrice/TotalPrice.scss
+++ b/src/Components/CheckOut/TotalPrice/TotalPrice.scss
@@ -1,6 +1,6 @@
 .total {
     padding: 22px;
-    max-width: 400px;
+    max-width: 500px;
     display: flex;
     flex-direction: column;
     background: #ffffff;
@@ -22,12 +22,17 @@
         display: flex;
         justify-content: space-between;
         margin-bottom: 20px;
-        span {
-            font-weight: 700;
-            font-size: 17px;
-            line-height: 28px;
-            color: #231f20;
-            margin-right: 15px;
+        gap: 30px;
+        &__price{
+            display: flex;
+            width: 100px;
+            justify-content: space-between;
+            span {
+                font-weight: 700;
+                font-size: 17px;
+                line-height: 28px;
+                color: #231f20;
+            }
         }
         &__info {
             display: flex;
