--- a/src/Components/ProfileForm/ProfileForm.scss
+++ b/src/Components/ProfileForm/ProfileForm.scss
@@ -45,7 +45,14 @@
     &__btn {
         display: flex;
         gap: 30px;
+        margin-bottom: 20px;
     }
+}
+
+.save{
+    font-weight: 700;
+    font-size: 20px;
+    color: #ff2e65;
 }
 
 #hidden{
