--- a/src/Components/Pay/Pay.scss
+++ b/src/Components/Pay/Pay.scss
@@ -15,6 +15,10 @@
         margin-bottom: 10px;
         padding-left: 10px;
     }
+    p{
+        color:red;
+        margin-bottom: 10px;
+    }
     &__small{
         display: flex;
         gap: 10px;
